--- a/coolStyle.css
+++ b/coolStyle.css
@@ -2,6 +2,10 @@
     text-align: center;
 }
 
+.table {
+    display: inline-table;
+}
+
 .secondary_header {
     display: inline-block;
     text-align: left;
