--- a/coolStyle.css
+++ b/coolStyle.css
@@ -1,7 +1,12 @@
 .container {
     text-align: center;
 }
-
+.hidden{
+    display:none;
+}
+.unhidden{
+    display:block;
+}
 .table {
     display: inline-table;
 }
